force-app/main/default/objects/Account/fields/MC_AssetCustomerKey__c.field-meta.xml
<CustomField>
    <fullName>MC_AssetCustomerKey__c</fullName>
    <label>MC_AssetCustomerKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>