force-app/main/default/objects/Account/fields/MC_AssetId__c.field-meta.xml
<CustomField>
    <fullName>MC_AssetId__c</fullName>
    <label>MC_AssetId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>