force-app/main/default/objects/Account/fields/SendedAssetData__c.field-meta.xml
<CustomField>
    <fullName>SendedAssetData__c</fullName>
    <label>SendedAssetData</label>
    <length>50</length>
    <type>Text</type>
</CustomField>