force-app/main/default/objects/Account/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendEmail</label>
    <type>Checkbox</type>
</CustomField>